--- a/public/admin.html
+++ b/public/admin.html
@@ -91,6 +91,6 @@
         </div>
     </footer>
 
-    <script src="admin-script.js"></script>
+    <script src="/admin-script.js"></script>
 </body>
 </html>
